# hostel-management-system-backend

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20260314153131_init_hostel_schema.sql
src/: main.rs
src/db/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/utils/: mod.rs
