[package]
name = "web-server-in-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.13.0"
chrono = { version = "0.4.44", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { 
    version = "0.8.6", 
    features = [
        "macros", 
        "postgres", 
        "runtime-tokio-rustls", 
        "chrono"
    ] 
}
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.20.0", features = ["derive"] }
